[db][auth] Modify liquibase changelog, models. Add JWT-authentication. Add SSL certificate

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,13 @@ spring.liquibase.url=jdbc:postgresql://localhost:5432/MessengerDB
 spring.liquibase.user=connection_user
 spring.liquibase.password=connection_user_pass
 
-#jwt.token.secret=jwtappdemo
-#jwt.token.expired=3600000
+jwt.token.secret=somesecretfromshchuko
+jwt.token.valid-time-millis=300000
+jwt.token.refresh-valid-time-millis=1800000
+
+# bash $ keytool -genkey -keyalg RSA -alias medium -keystore medium.jks -storepass password -validity 365 -keysize 4096 -storetype pkcs12
+server.ssl.key-store=classpath:medium.jks
+server.ssl.key-store-type=pkcs12
+server.ssl.key-store-password=password
+server.ssl.key-password=password
+server.ssl.key-alias=medium
