[db][auth][messenger] Modify liquibase changelog. Add password reset entry point. Impl the first version of messenger api

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,11 +11,12 @@ spring.liquibase.user=connection_user
 spring.liquibase.password=connection_user_pass
 
 jwt.token.secret=somesecretfromshchuko
-jwt.token.valid-time-millis=300000
+jwt.token.valid-time-millis=300000000
+#300000
 jwt.token.refresh-valid-time-millis=1800000
 
-# bash $ keytool -genkey -keyalg RSA -alias medium -keystore medium.jks -storepass password -validity 365 -keysize 4096 -storetype pkcs12
-server.ssl.key-store=classpath:medium.jks
+# bash$ keytool -genkey -keyalg RSA -alias medium -keystore medium.jks -storepass password -validity 365 -keysize 4096 -storetype pkcs12
+server.ssl.key-store=classpath:certificate/medium.jks
 server.ssl.key-store-type=pkcs12
 server.ssl.key-store-password=password
 server.ssl.key-password=password
