--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
 
+    implementation "org.hibernate.validator:hibernate-validator"
+    implementation "org.hibernate.validator:hibernate-validator-annotation-processor"
+    implementation "javax.validation:validation-api"
+
     implementation 'io.jsonwebtoken:jjwt:0.2'
 
     implementation 'org.liquibase:liquibase-core'
