[super-subsystem] super-commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 server.port=8075
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/MessengerDB
+spring.datasource.url=jdbc:postgresql://2a02:2698:6c2d:d7c7:f00e:1e68:ae0d:bffa:5432/MessengerDB
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=connection_user
 spring.datasource.password=connection_user_pass
 
 spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
-spring.liquibase.url=jdbc:postgresql://localhost:5432/MessengerDB
+spring.liquibase.url=jdbc:postgresql://2a02:2698:6c2d:d7c7:f00e:1e68:ae0d:bffa:5432/MessengerDB
 spring.liquibase.user=connection_user
 spring.liquibase.password=connection_user_pass
 
@@ -15,8 +15,8 @@ jwt.token.valid-time-millis=120000
 jwt.token.refresh-valid-time-millis=1800000
 
 # bash$ keytool -genkey -keyalg RSA -alias medium -keystore medium.jks -storepass password -validity 365 -keysize 4096 -storetype pkcs12
-server.ssl.key-store=classpath:certificate/medium.jks
-server.ssl.key-store-type=pkcs12
-server.ssl.key-store-password=password
-server.ssl.key-password=password
-server.ssl.key-alias=medium
+#server.ssl.key-store=classpath:certificate/medium.jks
+#server.ssl.key-store-type=pkcs12
+#server.ssl.key-store-password=password
+#server.ssl.key-password=password
+#server.ssl.key-alias=medium
