--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,18 @@
 server.port=8075
 
-spring.datasource.url=jdbc:postgresql://2a02:2698:6c2d:d7c7:f00e:1e68:ae0d:bffa:5432/MessengerDB
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.username=connection_user
-spring.datasource.password=connection_user_pass
+
+#spring.datasource.url=jdbc:postgresql://2a02:2698:6c2d:d7c7:f00e:1e68:ae0d:bffa:5432/MessengerDB
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.username=connection_user
+#spring.datasource.password=connection_user_pass
+
+spring.datasource.url=jdbc:h2:mem:h2DB;DB_CLOSE_DELAY=-1;CASE_INSENSITIVE_IDENTIFIERS=false
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
 
 spring.liquibase.change-log=classpath:liquibase/db.changelog-master.xml
-spring.liquibase.url=jdbc:postgresql://2a02:2698:6c2d:d7c7:f00e:1e68:ae0d:bffa:5432/MessengerDB
-spring.liquibase.user=connection_user
-spring.liquibase.password=connection_user_pass
 
 jwt.token.secret=somesecretfromshchuko
 jwt.token.valid-time-millis=120000
 jwt.token.refresh-valid-time-millis=1800000
-
-# bash$ keytool -genkey -keyalg RSA -alias medium -keystore medium.jks -storepass password -validity 365 -keysize 4096 -storetype pkcs12
-#server.ssl.key-store=classpath:certificate/medium.jks
-#server.ssl.key-store-type=pkcs12
-#server.ssl.key-store-password=password
-#server.ssl.key-password=password
-#server.ssl.key-alias=medium
